python-tester/log/compile_error_map_1.txt
-MAP EMPTY CONSTRUCTION TEST-

./tmp/outfile_map_1.cpp:31:7: error: no template named 'map' in namespace 'ft'; did you mean 'Map'?
                ft::map<std::string, int> p2;
                ~~~~^~~
                    Map
/Users/durante/Desktop/42-Cursus/cpp-projects/ft2/Map.hpp:9:7: note: 'Map' declared here
class Map {
      ^
1 error generated.
